tests/ui/typech/literal_assignment_int.stderr
× error[LM4375]: cannot assign value to literal
   ╭─[literal_assignment_int.lm:2:5]
 1 │ fn foo() {
 2 │     1 = false;
   │     ^^^^^^^^^ literal values are constant and cannot be assigned
 3 │ }
   ╰──